[package]
name = "file_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"